Model an configuration clean up

--- a/demo/viz.html
+++ b/demo/viz.html
@@ -117,7 +117,7 @@
             `;
             if (data.candidates && data.candidates.length > 0)
                 document.querySelector('#info').innerHTML += `
-                <p><strong>Candidates:</strong></p>
+                <p><strong>Candidates:</strong>
                 <ul>
                     ${data.candidates.map(candidate => `
                         <li>
@@ -127,7 +127,7 @@
                             ${candidate.adjustment !== undefined ? `Adjusted: ${candidate.adjustment}` : ''}
                         </li>                               
                     `).join('')}
-                </ul>
+                </ul></p>
                 `;
             if (data.hcp && (data.hcp != -1))
                 document.querySelector('#info').innerHTML += `
