--- a/src/frontend/viz.html
+++ b/src/frontend/viz.html
@@ -212,7 +212,7 @@
                                         `;
                                     if (data.candidates && data.candidates.length > 0)
                                         document.querySelector('#info').innerHTML += `
-                                            <p><strong>Candidates:</strong></p>
+                                            <p><strong>Candidates:</strong>
                                             <ul>
                                                 ${data.candidates.map(candidate => `
                                                     <li>
@@ -222,7 +222,7 @@
                                                         ${candidate.adjustment !== undefined ? `Adjusted: ${candidate.adjustment}` : ''}
                                                     </li>                               
                                                 `).join('')}
-                                            </ul>
+                                            </ul></p>
                                             `;
                                     if (data.hcp && (data.hcp != -1)) {
                                         let formattedShape = [];
