Better error messages

--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -130,6 +130,7 @@
         function processLinFile() {
             bidSequence = [];
             bidSeqPoint = 0;
+            openinglead = ''
             document.getElementById('biddingInput').value = ''
             document.getElementById('playInput').value = ''
             // Handle firefox lin-link
