Minor adjustments, and new configurations

--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -30,7 +30,7 @@
         </select><br><br>
 
         
-        <button onclick="readImportedFile()" id="importBtn" disabled>Import file</button>&nbsp;&nbsp;<input type="file" id="importFile" onchange="enableImportBtn()"><br><br>
+        <button onclick="readImportedFile()" id="importBtn" disabled>Import file</button>&nbsp;&nbsp;<input type="file" accept=".txt, .pbn, .lin" id="importFile" onchange="enableImportBtn()"><br><br>
 
         
         <textarea id="importInput" rows="8" cols="70"></textarea>
