--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -153,7 +153,12 @@
             });
 
             ws.addEventListener("close", function (event) {
-                console.log("WebSocket closed:", event);
+                if (event.wasClean) {
+                    console.log(`Closed cleanly, code=${event.code} reason=${event.reason}`);
+                } else {
+                    console.error('Connection to server died');
+                    alert("Connection died")
+                }                
                 //document.querySelector('#auctionstr').innerHTML += 'Connection to server closed <br>'
             });
 
