Added new parameters. Some minor improvements

--- a/demo/viz.html
+++ b/demo/viz.html
@@ -113,7 +113,7 @@
         let i = 0
         log['bids'].forEach(data => {
             document.querySelector('#info').innerHTML += `
-            <p class="bid"><strong>Bid:</strong> ${data.bid} ${data.who ? ' by ' + data.who : ''}</p>
+            <p class="bid"><strong>Bid:</strong> ${data.bid}${data.alert=="True"? "*":""} ${data.who ? ' by ' + data.who : ''}</p>
             `;
             if (data.candidates && data.candidates.length > 0)
                 document.querySelector('#info').innerHTML += `
