--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -113,6 +113,7 @@
         const rotate = urlParams.get('R')
         const visible = urlParams.get('V')
         const playonly = urlParams.get('P')
+        const matchpoint = urlParams.get('M')
         let server = urlParams.get('server')
         if (!server) server = '3'
         let no_human = !north && !east && !south && !west
@@ -128,6 +129,7 @@
         if (cont) player += "&C=x"
         if (rotate) player += "&R=x"
         if (visible) player += "&V=x"
+        if (matchpoint) player += "&M=x"
         if (playonly) player += "&P=" + playonly 
         var queryString = ""
         var ws
