--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -636,7 +636,7 @@
                 // We lead from dummy
                 player = (player + 2) % 4
             }
-            let html = "<h3>Play</h3><br> " + data["card"] +  (data.who !== undefined ? " selected by " + this.data["who"]: "")  + "<br/><br/>"
+            let html = "<h3>Play</h3><br> " + data["card"] +  (data.who !== undefined ? " selected by " + data["who"] : "")  + "<br/><br/>"
 
             if ("candidates" in data && data.candidates.length > 0) {
                 html += '<h3>Candidates</h3>'
@@ -918,7 +918,7 @@
             } catch (error) {
                 document.querySelector("#loader").style.visibility = "hidden";
                 // Handle any errors that occur during the fetch request
-                alert('Error fetching data:', error.message);
+                alert('Error fetching data:' + error.message);
                 // Show an error message to the user or perform other error handling actions
             }
         }
