--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -643,6 +643,7 @@
                 html += '<p>We have 3 different parameters for selecting the card, and first goal is to make/set the contract (if not matchpoints), then the double dummy score, and finally the score from the neural network. '
                 html += 'If the quality of the samples are bad (or the nn suggest a specific card with confidence), then we select the that card. '
                 html += 'Also be aware that the data is rounded to nearest even number before comparing.</p>'
+                html += 'OR use MP or IMP calculation instead of tricks.<br><br>'
                 html += '<table>'
 
                 for (const candidate of data.candidates) {
@@ -660,6 +661,12 @@
                     }
                     if ("expected_score_dd" in candidate) {
                         html += '<td>e(score)dd=' + Math.round(candidate['expected_score_dd'] * 100) / 100 + '</td>'
+                    }
+                    if ("expected_score_mp" in candidate) {
+                        html += '<td>e(MP)dd=' + Math.round(candidate['expected_score_mp'] * 100) / 100 + '%</td>'
+                    }
+                    if ("expected_score_imp" in candidate) {
+                        html += '<td>e(IMP)dd=' + candidate['expected_score_imp'] + '</td>'
                     }
                     if ("insta_score" in candidate) {
                         html += '<td>iscore=' + Math.round(candidate['insta_score'] * 1000) / 1000 + '</td>'
@@ -737,7 +744,7 @@
                                     html += '<div>East: ' + data['hcp'][0] + ' hcp, shape: '
                                 } 
                                 if (player == 3) {
-                                    html += '<div>Southth: ' + data['hcp'][0] + ' hcp, shape: '
+                                    html += '<div>South: ' + data['hcp'][0] + ' hcp, shape: '
                                 } 
                                 
                                 for (let i = 0; i < 4; i++) {
