Challenge The Champs

--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -545,7 +545,7 @@
         }        
 
         function validate_suit(part) {
-            return part === '' || /\d|[TJQKA]/.test(part);
+            return part === '' || /\d|[TJQKAX]/.test(part);
         }
 
         function validateHand(hand) {
